# promptsub-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/promptsub/: __init__.py  errors.py  prompt_api.py  special_chatacters.py  types.py
src/promptsub/prompt_components/: base.py  template.py  variable.py
tests/: test_errors.py  test_getting_variables.py  test_substitution.py
